--- a/.gitea/workflows/deploy.yml
+++ b/.gitea/workflows/deploy.yml
@@ -5,10 +5,13 @@ on:
     branches: [ main ]  # Adjust this to your main branch name
 
 jobs:
-  - name: executing remote ssh commands using ssh key
-  uses: appleboy/ssh-action@v1.0.3
-  with:
-    host: ${{ secrets.HOST }}
-    username: ${{ secrets.USER }}
-    key: ${{ secrets.BLOG_DEPLOY_KEY }}
-    script: ls -al
+  deploy:
+    steps:
+
+      - name: executing remote ssh commands using ssh key
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.BLOG_DEPLOY_KEY }}
+        script: ls -al
