add recursive option to cp command

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,4 +16,4 @@ jobs:
           key: ${{ secrets.BLOG_DEPLOY_KEY }}
           script: |
             git -C /root/blog/ pull
-            cp /root/blog/www/* /var/www/blog/ 
+            cp -r /root/blog/www/* /var/www/blog/ 
